h5: +mvnw, +generate-openapi.sh